--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-live-clock": "^4.0.3",
+    "react-modal": "^3.15.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "resolve": "1.10.0",
