--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "jest-watch-typeahead": "0.3.0",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "0.5.0",
-    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -55,6 +54,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "resolve": "1.10.0",
+    "sass": "^1.79.5",
     "sass-loader": "^7.1.0",
     "scss-loader": "0.0.1",
     "sed": "^0.0.1",
